# llm-observe-proxy

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.pypi.md  design.md  pyproject.toml
docs/: publishing.md
docs/ADRs/response-compatibility-fixes/: ADR.md  regression-scenarios.md
docs/analysis/: llama-cpp-qwen36-copilot-root-cause-solution.md  llama-cpp-qwen36-copilot-tool-calling-fix-impact.md  llama-cpp-qwen36-copilot-tool-calling.md  llama-cpp-qwen36-upstream-pr-draft.md
docs/analysis/llama-cpp-qwen36-post-pr/: README.md  framework-comparison.md  repro-test-fix-guide.md
docs/analysis/may_4/: llama-cpp-qwen36-copilot-reasoning-tool-call-leak.md
docs/analysis/may_4/fixtures/: row_1142_read_file_requirements.request.sanitized.json  row_1230_run_terminal_backend.request.sanitized.json  row_1256_read_file_logger_after_compaction.request.sanitized.json
docs/api/: README.md
docs/plans/cost-estimate/: README.md
docs/plans/features/model-selection/: README.md  implementation-summary.md
docs/plans/features/session/: README.md
docs/plans/v0.3/: README.md  TODO.md
docs/plans/v0.4/: README.md  TODO.md
docs/plans/v0.5/: implementation_plan.md  llm_observe_proxy_admin_ui_requirements_doc.md
docs/plans/v0.5/after_implementation/: admin_ui_after_implementation.md
docs/plans/v0.5/current_state/: admin_ui_current_state.md
docs/plans/v0.5/phase-1-data-model/: plan.md  todo.md
docs/plans/v0.5/phase-2-route-engine/: plan.md  todo.md
docs/plans/v0.5/phase-3-backend-api/: plan.md  todo.md
docs/plans/v0.5/phase-4-ui-foundation/: plan.md  todo.md
docs/plans/v0.5/phase-5-tab-implementations/: plan.md  todo.md
docs/plans/v0.5/phase-6-polish/: plan.md  todo.md
docs/plans/v0.5/phase-7-after-implementation-review-and-fixes/: plan.md  todo.md
docs/tests/: README.md
scripts/: capture_screenshots.py  publish_pypi.py  seed_demo_db.py
src/llm_observe_proxy/: __init__.py  __main__.py  admin.py  app.py  billing.py  capture.py  cli.py  compatibility.py  config.py  costing.py  database.py  pricing_catalog.py  proxy.py  public_api.py  rendering.py  routing.py  token_estimation.py
src/llm_observe_proxy/static/: app.js  styles.css
src/llm_observe_proxy/templates/: _confirm_modal.html  _connection_summary.html  _fallback_defaults_form.html  _icons.html  _requests_table.html  _status_badge.html  base.html  detail.html  index.html  not_found.html  run_detail.html  runs.html  settings.html  settings_base.html  settings_data.html  settings_diagnostics.html  settings_pricing.html  settings_providers.html  settings_routing.html  settings_server.html
tests/: conftest.py  test_admin_api.py  test_admin_ui.py  test_compatibility.py  test_config_and_routing.py  test_database_models.py  test_live_api_compat.py  test_pricing_catalog.py  test_proxy_capture.py  test_publish_script.py  test_rendering_and_cli.py  test_route_engine.py
tests/fixtures/usage_shapes/: hf_router_chat_completion.json  openai_chat_completion.json  openai_chat_stream.sse  openai_responses.json  openrouter_chat_completion.json  openrouter_chat_stream.sse
(+5 files in other folders)
