[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "llm-observe-proxy"
version = "0.1.0"
description = "OpenAI-compatible LLM proxy with SQLite request capture, observability, and an admin UI."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
authors = [{ name = "LLM Observe Proxy Contributors" }]
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0.32",
    "uvicorn[standard]>=0.30.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.2",
    "pytest-asyncio>=0.23.8",
    "respx>=0.21.1",
    "ruff>=0.6.4",
]

[project.scripts]
llm-observe-proxy = "llm_observe_proxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_observe_proxy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
